webui/static/style.css
/* ... */
.no-select {
    user-select: none; /* Standard syntax */
    -webkit-user-select: none; /* Chrome and Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE 10+ */
}

body {
    font-family: Arial, sans-serif;
    font-size: var(--font-size-large);
    padding: 0;
    margin: 10px;
    display: flex;
    justify-content: center;
    height: calc(100vh - 20px);
    width: calc(100vw - 20px);
    background-color: var(--background-color);
    overflow: hidden;
    position: absolute;
}

.name {
    font-family: Arial, sans-serif;
    font-size: var(--font-size-small);
    color: var(--chat-name-color);
    font-weight: bold;
    margin-bottom: 7px;
    font-size: 1em;
}

.text {
    font-family: Arial, sans-serif;
    font-size: var(--font-size-large);
    color: var(--chat-text-color);
}

.session {
    font-family: Arial, sans-serif;
    font-size: var(--font-size-medium);
    color: var(--chat-text-color);
    display: block;
    float: none;
    border-radius: 3px;
    border: 1px solid var(--sessions-back-color-b);
    margin-top: 10px;
    padding-left: 10px;
    height: 44px;
    min-height: 44px;
    line-height: 44px;
    background-color: var(--sessions-back-color);
    color: var(--sessions-text-color);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
}

.session:hover {
    /* background-color: var(--sessions-back-color); */
    text-decoration: underline;
    text-decoration-style: solid;
    text-decoration-thickness: 1.5px;
    text-underline-offset: 3px;
    cursor: pointer;
}

.session svg {
    visibility: hidden;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
}

.session:hover svg {
    visibility: visible;
    cursor: pointer;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
 }

.session_new {
    background-color: var(--sessions-new-back-color);
    color: var(--sessions-new-text-color);
    font-weight: bold;
    font-size: 30px;
    width: 44px;
    padding: 0;
    text-align: center;
}
.session p {
    margin: 0;
}

.session_new:hover {
    /* background-color: var(--sessions-new-back-color-h); */
    text-decoration: underline;
    text-decoration-style: solid;
    text-decoration-thickness: 1.5px;
    text-underline-offset: 3px;
    cursor: pointer;
}

.session_current {
    border: 2px solid var(--sessions-current-back-color-b);
    color: var(--sessions-current-text-color);
    font-weight: bold;
}

.session_current svg {
    visibility: hidden;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
}

.session_current:hover svg {
    visibility: visible;
    cursor: pointer;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
 }

.session_current:hover {
    text-decoration: none;
    cursor: auto;
}

svg {
    fill: var(--controls-frame-header-text-color);
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
}

svg:hover {
    fill: var(--checkmark-color);
}

.error {
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: var(--font-size-large);
    color: var(--error-color);
    border: none;
}

.name, .text {
    display: inline-block;
}

#chat-container {
    display: flex;
    flex-direction: row;
    height: 90%;
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    box-sizing: border-box;
}

#chat-column {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    height: 100%;
    position: relative;
}

#control-column {
    width: 300px;
    min-width: 300px;
    flex-direction: column;
    padding-left: 10px;
    padding-right: 10px;
}

#sessions-column {
    width: 240px;
    min-width: 240px;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    padding-right: 10px;
}
#controls, #sessions
{
    overflow-y: auto;
    max-height: calc(100% - 74px);
    padding-bottom: 20px;
    margin-top: 10px;
}
#sessions-column.hidden, #control-column.hidden {
    width: 44px;
    min-width: 44px;
}
#sessions-column.hidden #sessions, #control-column.hidden #controls {
    display: none;
}

#sessions-box {
    width: calc(100% - 20px);
}

.session
{
    overflow: hidden;
}

#chatbox {
    padding-left: 10px;
    padding-right: 10px;
    overflow-y: auto;
    background-color: --background-color;
}

#chatbox .box {
    margin: 10px 0;
    padding: 10px;
    border-radius: 10px;
    border: 1px solid var(--chat-back-color-b);
    line-height: 1.4;
    position: relative;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
    overflow-y: auto;
}

#chatbox .box svg {
    visibility: hidden;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
}

#chatbox .box:hover svg {
    visibility: visible;
    cursor: pointer;
    text-shadow: 5px 5px 5px rgba(0,0,0,1.0);
}

#chat-input-form {
    padding-left: 10px;
    padding-right: 10px;
    width: calc(100% - 20px);
    display: flex;
    position: fixed;
    bottom: 0;
    justify-content: space-between;
    left: 0;
    background-color: var(--background-color);
    height:10%;
    padding: 10px;
}

#chat-input-form .buttons {
    display: flex;
    align-content: center;
    justify-content: center;
    flex-direction: column;
    min-width: 140px;
    padding: 0px 10px;
}

#chat-input-form button {
    width: 100%;
    height: 30px;
    background-color: var(--sessions-back-color);
    color: var(--sessions-text-color);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
    border: 1px solid var(--sessions-back-color-b);
    cursor: pointer;
    margin: 5px 0px;
}

#chat-input-form button:hover {
    text-decoration: underline;
}

#user-input {
    font-size: var(--font-size-large);
    width: calc(100% - 20px);
    padding: 10px;
    padding-top: 14px;
    padding-bottom: 14px;
    border: 1px solid var(--input-field-color-b);
    border-radius: 3px;
    background-color: var(--input-field-color);
    color: var(--chat-text-color);
    max-height: 100%;
    min-height: 100%;
    resize: none;
    box-sizing: border-box;
    overflow-y: auto;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
}
/* ... */

